# fishmlserv

./: Dockerfile  README.md  fish.ipynb  fly.toml  pyproject.toml
LB/: default.conf
note/: fish.ipynb  fish_2.ipynb  model.pkl
src/fishmlserv/: cli.py  cli_fire.py  cli_typer.py  curl.py  main.py
src/fishmlserv/model/: manager.py
tests/: test_fish.py
