[project]
name = "fishmlserv"
version = "0.2.0"
description = "Serving Machine Learning Model - using sklearn(KNeighborsClassifier), using FastApi, Fly.io"
authors = [
    {name = "EstherCho-7", email = "dkgkqm777@gmail.com"},
]
dependencies = [
    "fishmlserv @ file:///${PROJECT_ROOT}/",
    "uvicorn[standard]>=0.30.6",
    "fastapi>=0.112.2",
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
