[project]
name = "fishmlserv"
version = "0.8.6"
description = "Serving Machine Learning Model - using sklearn(KNeighborsClassifier), using FastApi, Fly.io"
authors = [
    {name = "EstherCho-7", email = "dkgkqm777@gmail.com"},
]
dependencies = [
    #    "uvicorn[standard]>=0.30.6",
    #    "fastapi>=0.112.2",
    #    "matplotlib>=3.7.5",
    #    "scikit-learn>=1.3.2",
    "fire>=0.6.0",
    "typer>=0.12.5",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
get-model-path="fishmlserv.cli:call_path"
prediction-f="fishmlserv.cli_fire:main"
prediction-t="fishmlserv.cli_typer:main"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]
